@@ -1,0 +1,11 @@
+{# vim:set softtabstop=2: -#}
+{% set wx = True %}
+{#% set refresh = 15 %#}
+{% include "_header.html" %}
+
+            <h1>{{ status_code }} {{ title }}</h1>
+            <p>
+              {{ text }}
+            </p>
+
+{% include "_footer.html" %}
